@@ -1,3 +1,7 @@
+2011-12-03  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-clisp.lisp (wait-for-input): Add a version for windows.
+
 2011-12-02  Stas Boukarev  <stassats@gmail.com>
 
 	* swank-sbcl.lisp (wait-for-input): Define only if
